--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -35,5 +35,5 @@ jobs:
       - name: eslint + fix
         uses: getsentry/action-eslint-fix@main
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
