added time-zone picker,updated README installation

--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.7.3",
     "react": "^17.0.1",
+    "react-bootstrap-timezone-picker": "^2.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
