--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -19,20 +19,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+        
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          
-      # Runs a single command using the runners shell
-      - name: eslint + fix
-        uses: getsentry/action-eslint-fix@main
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+      - name: Run ESLint
+        run: eslint src/front-end/src/*.js src/back-end/src/*.js --fix
