--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -19,7 +19,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Install modules
+        run: npm install
         
-      # Runs a single command using the runners shell
       - name: Run ESLint
         run: eslint src/front-end/src/*.js src/back-end/src/*.js --fix
