--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-node@v1
         with: 
           node-version: '15.x'
-      - run: npm install eslint
+      - run: npm install -g eslint
         
       - name: Run ESLint
         run: eslint src/front-end/src/*.js src/back-end/src/*.js --fix
