--- a/src/front-end/.eslintrc.json
+++ b/src/front-end/.eslintrc.json
@@ -26,6 +26,13 @@
         "ignoreStrings": true,
         "ignoreTemplateLiterals": true,
         "ignoreRegExpLiterals": true
+      },
+      {
+        "parser": "babel-eslint",
+        "parserOptions": {
+          "sourceType": "module",
+          "allowImportExportEverywhere": true
+        }
       }
     ]
   }
