--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -23,3 +23,11 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run ESLint
         run: eslint src/front-end/src/*.js src/back-end/src/*.js --fix
+      
+      - name: Install Jest
+        run: npm install --save-dev jest@26.6.0
+             npm install react-test-renderer
+             npm Start
+             
+      - name: Run tests
+        run: npm run test
