--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -20,7 +20,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run Tests
         run: |
-          npm install 
+          npm install --save-dev jest@26.6.0
+          npm install react-test-renderer
           npm test
           
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
