--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -27,6 +27,7 @@ jobs:
       - run: | 
           npm install -g eslint
           npm install eslint-plugin-react@latest --save-dev
+          npm install 
         
       - name: Run ESLint
         run: eslint src/front-end/src/*.js src/back-end/src/*.js --fix
