--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -28,6 +28,7 @@ jobs:
           npm install -g eslint
           npm install eslint-plugin-react@latest --save-dev
           npm install --save eslint-config-airbnb
+          npm install eslint-plugin-prettier@latest --save-dev
           npm install 
         
       - name: Run ESLint
