--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -29,6 +29,7 @@ jobs:
           npm install eslint-plugin-react@latest --save-dev
           npm install --save eslint-config-airbnb
           npm install eslint-plugin-prettier@latest --save-dev
+          npm install --save-dev eslint-config-prettier
           npm install 
         
       - name: Run ESLint
