--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Run Tests
         run: |
           npm install
+          cd src/front-end/
           npm test
           
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
