--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Run Tests
-        run: 
+        run: |
           npm install
           npm test
           
