--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -16,9 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    //"test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "test": "jest"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
