--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -27,6 +27,10 @@ jobs:
       - run: | 
           npm install -g eslint
           npm install eslint-plugin-react@latest --save-dev
+          npm install --save eslint-config-airbnb
+          npm install eslint-plugin-prettier@latest --save-dev
+          npm install --save-dev eslint-config-prettier
+          npm install eslint-config-standard
           npm install 
         
       - name: Run ESLint
