--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the develop branch
 on:
   pull_request:
-    branches: [ develop, master ]
+    branches: [ develop, master, jp-test-branch ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
