Update link file to install requirements eslint ci

--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -27,7 +27,11 @@ jobs:
       - run: | 
           npm install -g eslint
           npm install eslint-plugin-react@latest --save-dev
+          npm install --save eslint-config-airbnb
+          npm install eslint-plugin-prettier@latest --save-dev
+          npm install --save-dev eslint-config-prettier
+          npm install eslint-config-standard
           npm install 
         
       - name: Run ESLint
-        run: eslint src/front-end/src/*.js src/back-end/src/*.js --fix
+        run: eslint src/front-end/src/*.js src/back-end/src/*.js
