Add form success and failures handlers

--- a/src/front-end/.eslintrc.json
+++ b/src/front-end/.eslintrc.json
@@ -16,6 +16,7 @@
     "index.js"
   ],
   "rules": {
+    "no-console": "off", 
     "import/no-unresolved": "off",
     "jsx-a11y/href-no-hash": [
       "off"
