--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -34,7 +34,7 @@ jobs:
           npm install 
       
       - run: |
-          npm install --save-dev jest@26.6.0
+          npm install --save-dev jest
           npm install react-test-renderer
           npm install
           cd src/front-end/
