--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -34,6 +34,8 @@ jobs:
           npm install 
       
       - run: |
+          npm install --save request
+          npm install --save request-promise-native
           npm install --save-dev jest
           npm install react-test-renderer
           npm install
