--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -34,9 +34,7 @@ jobs:
           npm install 
       
       - run: |
-          npm install --save request
-          npm install --save request-promise-native
-          npm install --save-dev jest
+          npm install --save-dev jest@26.6.0
           npm install react-test-renderer
           npm install
           cd src/front-end/
