--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -35,3 +35,12 @@ jobs:
         
       - name: Run ESLint
         run: eslint src/front-end/src/*.js src/back-end/src/*.js
+      
+      - run: |
+          npm install --save-dev jest@26.6.0
+          npm install react-test-renderer
+          cd src/front-end/
+          npm start
+          
+      - name: Run Jest
+        run: npm run test
