--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -39,7 +39,7 @@ jobs:
       - run: |
           npm install --save-dev jest@26.6.0
           npm install react-test-renderer
-          cd src/front-end/
+          cd src/front-end
           npm start
           
       - name: Run Jest
