--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -39,7 +39,9 @@ jobs:
       - run: |
           npm install --save-dev jest@26.6.0
           npm install react-test-renderer
-          cd src/front-end
+          cd src/front-end/
+          npm install -g react-scripts
+          npm install
           npm start
           
       - name: Run Jest
