--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -39,9 +39,8 @@ jobs:
       - run: |
           npm install --save-dev jest@26.6.0
           npm install react-test-renderer
-          cd src/front-end/
-          npm install -g react-scripts
-          npm install
           
       - name: Run Jest
-        run: npm run test
+        run: 
+          cd src/front-end/
+          npm run test
