--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           npm install --save-dev jest@26.6.0
           npm install react-test-renderer
-          npm install
+          npm install -g react-script
           cd src/front-end/
           npm run test
      
