--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -41,6 +41,5 @@ jobs:
           npm install --save-dev jest@26.6.0
           npm install react-test-renderer
           npm install -g react-script
-          cd src/front-end/
-          npm run test
+          npm test
      
