--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -41,5 +41,6 @@ jobs:
           npm install --save-dev jest@26.6.0
           npm install react-test-renderer
           npm install
+          cd src/front-end/
           npm test
      
