--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -35,3 +35,11 @@ jobs:
         
       - name: Run ESLint
         run: eslint src/front-end/src/*.js src/back-end/src/*.js
+      
+      - name: Run jest
+        run: |
+          npm install --save-dev jest@26.6.0
+          npm install react-test-renderer
+          npm install
+          cd src/front-end/
+          npm test
