--- a/src/front-end/.eslintrc.json
+++ b/src/front-end/.eslintrc.json
@@ -16,7 +16,10 @@
     "index.js"
   ],
   "rules": {
-    "no-console": "off", 
+    "react/destructuring-assignment": [
+      "off"
+    ],
+    "no-console": "off",
     "import/no-unresolved": "off",
     "jsx-a11y/href-no-hash": [
       "off"
