Fix class methods use this issue

--- a/src/front-end/.eslintrc.json
+++ b/src/front-end/.eslintrc.json
@@ -16,6 +16,9 @@
     "index.js"
   ],
   "rules": {
+    "class-methods-use-this": [
+      "off"
+    ],
     "react/destructuring-assignment": [
       "off"
     ],
