--- a/src/front-end/.eslintrc.json
+++ b/src/front-end/.eslintrc.json
@@ -16,6 +16,9 @@
     "index.js"
   ],
   "rules": {
+    "react/sort-comp": [
+      "off"
+    ],
     "class-methods-use-this": [
       "off"
     ],
