--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.7.3",
     "firebase": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap-timezone-picker": "^2.0.1",
     "react-dom": "^17.0.1",
