Fix ESLint issue

--- a/src/front-end/.eslintrc.json
+++ b/src/front-end/.eslintrc.json
@@ -22,6 +22,9 @@
     "class-methods-use-this": [
       "off"
     ],
+    "prefer-destructuring": [
+      "off"
+    ],
     "react/destructuring-assignment": [
       "off"
     ],
