--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -41,6 +41,7 @@ jobs:
           npm install --save-dev jest@26.6.0
           npm install react-test-renderer
           npm install babel-preset-react-app
+          npm install react-dom
           npm install
           cd src/front-end/
           npm test
