--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -42,6 +42,7 @@ jobs:
           npm install react-test-renderer
           npm install babel-preset-react-app
           npm install react-dom
+          npm install react-router-dom
           npm install
           cd src/front-end/
           npm run test
