--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -38,13 +38,12 @@ jobs:
 
       - name: Run jest
         run: |
-          npm install --save-dev jest@26.6.0
-          npm install react-test-renderer
-          npm install babel-preset-react-app
-          npm install react-dom
-          npm install react-router-dom
-          npm install @testing-library/user-event @testing-library/dom --save-dev
-          npm install firebase
           npm install
-          cd src/front-end/
-          npm run test
+          # npm install --save-dev jest@26.6.0
+          # npm install react-test-renderer
+          # npm install babel-preset-react-app
+          # npm install react-dom
+          # npm install react-router-dom
+          # npm install @testing-library/user-event @testing-library/dom --save-dev
+          # npm install firebase
+          cd src/front-end/; npm run test
