--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Run jest
         run: |
+          pwd
           npm install
           # npm install --save-dev jest@26.6.0
           # npm install react-test-renderer
