--- a/src/back-end/.eslintrc.json
+++ b/src/back-end/.eslintrc.json
@@ -1,15 +1,66 @@
 {
+    "extends": [
+        "airbnb",
+        "plugin:prettier/recommended",
+        "prettier/react"
+    ],
     "env": {
+        "browser": true,
         "commonjs": true,
-        "es2021": true,
+        "es6": true,
+        "jest": true,
         "node": true
     },
-    "extends": [
-        "standard"
+    "ignorePatterns": [
+        "reportWebVitals.js",
+        "index.js"
     ],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
     "rules": {
+        "no-alert": [
+            "off"
+        ],
+        "prefer-template": [
+            "off"
+        ],
+        "react/sort-comp": [
+            "off"
+        ],
+        "class-methods-use-this": [
+            "off"
+        ],
+        "prefer-destructuring": [
+            "off"
+        ],
+        "react/destructuring-assignment": [
+            "off"
+        ],
+        "no-console": "off",
+        "import/no-unresolved": "off",
+        "jsx-a11y/href-no-hash": [
+            "off"
+        ],
+        "react/jsx-filename-extension": [
+            "warn",
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        ],
+        "max-len": [
+            "warn",
+            {
+                "code": 80,
+                "tabWidth": 2,
+                "comments": 80,
+                "ignoreComments": false,
+                "ignoreTrailingComments": true,
+                "ignoreUrls": true,
+                "ignoreStrings": true,
+                "ignoreTemplateLiterals": true,
+                "ignoreRegExpLiterals": true
+            }
+        ]
     }
 }
