--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "babel-preset-react-app": "^10.0.0",
-    "eslint": "7.20.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^6.15.0",
