--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -26,11 +26,11 @@ jobs:
           node-version: '15.x'
       - run: |
           npm install -g eslint
-          npm install -g eslint-plugin-react@latest 
+          npm install eslint-plugin-react@latest 
           npm install eslint-config-airbnb
-          npm install -g eslint-plugin-prettier@latest 
-          npm install -g eslint-config-prettier
-          npm install -g eslint-config-standard
+          npm install eslint-plugin-prettier@latest 
+          npm install eslint-config-prettier
+          npm install eslint-config-standard
           npm install
           eslint src/front-end/src/**/*.js src/back-end/src/**/*.js
 
