--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '15.x'
       - run: |
           npm install -g eslint
-          npm install eslint-plugin-react@latest 
+          npm install -g eslint-plugin-react@latest 
           npm install eslint-config-airbnb
           npm install eslint-plugin-prettier@latest 
           npm install eslint-config-prettier
