--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -28,7 +28,7 @@ jobs:
           npm install -g eslint
           npm install -g eslint-plugin-react@latest 
           npm install eslint-config-airbnb
-          npm install -g eslint-plugin-prettier@latest 
+          npm install eslint-plugin-prettier@latest 
           npm install -g eslint-config-prettier
           npm install eslint-config-standard
           npm install
