--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -26,7 +26,9 @@ jobs:
           node-version: '15.x'
       - run: |
           npm install -g eslint
-          cd src/front-end/; npm install
+          cd src/back-end/; npm install
+          cd ..
+          cd front-end/; npm install
           eslint ../../src/front-end/src/**/*.js ../../src/back-end/src/**/*.js
 
       # - name: Run ESLint
