Make minor CI edits

--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -20,7 +20,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }} and run ESLint
         uses: actions/setup-node@v1
         with:
           node-version: '15.x'
@@ -30,9 +30,6 @@ jobs:
           cd ..
           cd front-end/; npm install
           eslint ../../src/front-end/src/**/*.js ../../src/back-end/src/**/*.js
-
-      # - name: Run ESLint
-      #   run: eslint src/front-end/src/**/*.js src/back-end/src/**/*.js
 
       - name: Run jest
         run: |
