Disable prop types eslint rules

--- a/src/front-end/.eslintrc.json
+++ b/src/front-end/.eslintrc.json
@@ -61,6 +61,9 @@
         "ignoreTemplateLiterals": true,
         "ignoreRegExpLiterals": true
       }
+    ],
+    "react/prop-types": [
+      "off"
     ]
   }
 }
