--- a/src/back-end/package.json
+++ b/src/back-end/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^8.0.0",
+    "firebase-admin": "^9.6.0",
     "nodemailer": "^6.4.18",
     "nodemon": "^2.0.6"
   },
